js/js.translator/testData/incremental/invalidation/friendDependencyWithCrossModuleInliner/main/test.0.kt
fun test(): Int {
    val v = PublicClassHeir()
    return v.foo() + v.bar + v.baz() - 5
}
